# monkebucko

./: Cargo.toml
.cargo/: config.toml
assets/: crt.glb  dialogue.ron  egg.glb  hearto.world
assets/maps/: backyard.tmx  beach.tmx  bones.tmx  buckotown.tmx  buckoville.tmx  eggscape.tmx  farm.tmx  fields.tmx  forest.tmx  forest_west.tmx  mountains.tmx
assets/tilesets/: Basic Terrain.tsx  advance_terrain.tsx  basic_assets.tsx  basic_terrain.tsx  beach.tsx  farm.tmx  fence.tsx  island.tsx  water.tsx  waterfall_big.tsx  waterfalls.tsx
src/: animation.rs  audio.rs  auto_scaling.rs  game.rs  main.rs  menu.rs  progress.rs  splash.rs  viewport.rs
src/game/: bones.rs  dialogue.rs  effects.rs  egg.rs  topdown.rs
src/game/egg/: cracking.rs  stars.rs
src/game/interactions/: dialogue.rs  mod.rs  monologue.rs
